# ugcservice

./: .env-empty  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
ELK/: compose.yml
ELK/elasticsearch/: start.sh
ELK/elasticsearch/config/: elasticsearch.yml
ELK/kibana/config/: kibana.yml
ELK/logstash/: start.sh
ETL/: Dockerfile.etl  config.py  consumer.py  main.py  models.py
ETL/requirements/: consumer.dev.txt
ETL/src/: models.py
ETL/src/broker/: consumer.py
ETL/src/config/: clickhouse.py  config.py
ETL/src/etl/: extract.py  load.py  runner.py  transform.py
ETL/src/logger/: __init__.py  config.py  logger.py
ETL/src/storage/: clickhouse.py
ETL/src/utils/: utils.py
api/: .dockerignore  Dockerfile  pytest.ini
api/requirements/: api.dev.txt  api.test.txt
api/src/: main.py
api/src/analytics/: config.py  dependencies.py  models.py  router.py  utils.py
api/src/config/: config.py  db.py  kafka.py
api/src/core/: dependencies.py  exceptions.py  protocols.py  responses.py  uow.py  utils.py
api/src/db/: config.py  dependencies.py  exceptions.py  mongo_client.py
api/src/logger/: formatters.py  logger.py
api/tests/: compose.yml  conftest.py  test_db_init.sh
clickhouse/initdb/: init.sql
infra/ELK/: compose.yml
infra/kafka/: Dockerfile.kafka
infra/mongo/: compose.yml
kafka_cluster/: compose.yml
mongo_cluster/: compose.yml  init_commands.txt
mongo_cluster/init/: cfgRs.js  init.sh  mongos.js  mongos.sh  rs1.js  rs1.sh  rs2.js
nginx_server/config/: nginx.conf
src/: main.py
src/db/: repository.py
(+36 files in other folders)
