[project]
name = "ugcservice"
version = "0.1.0"
description = "UGC service for Movies App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0"
]

[project.optional-dependencies]
app = [
    "backoff>=2.2.1",
    "fastapi>=0.115.6",
    "motor==3.4.0",
    "pymongo==4.8.0",
    "uvicorn>=0.34.0"
]
consumer = [
    "clickhouse-connect>=0.8.13"
]
